2006-08-21  Jorn Baayen  <jorn@openedhand.com>

	* applets/Makefile.am:
	* applets/battery/Makefile.am:
	* applets/battery/battery.c:
	* configure.ac:

	Add skels for a battery applet. Built only if libapm is available.
	Needs graphics.

	* applets/launcher/launcher.c: (launcher_data_free),
	(mb_panel_applet_create):

	Initialize icon_theme and icon_theme_changed_id to NULL and 0.
	
2006-08-21  Jorn Baayen  <jorn@openedhand.com>

	* applets/systray/Makefile.am:
	* applets/systray/systray.c: (tray_icon_added_cb),
	(message_sent_cb), (message_cancelled_cb), (screen_changed_cb),
	(mb_panel_applet_create):
	* configure.ac:

	Added optional support for tray icon messages using libnotify.

2006-08-21  Jorn Baayen  <jorn@openedhand.com>

	* applets/Makefile.am:
	* applets/clock.c:
	* applets/clock/Makefile.am:
	* applets/clock/clock.c:
	* applets/launcher.c:
	* applets/launcher/Makefile.am:
	* applets/launcher/launcher.c:
	* applets/systray/Makefile.am:
	* applets/systray/eggmarshalers.list:
	* applets/systray/eggtraymanager.c:
	* applets/systray/eggtraymanager.h:
	* applets/systray/systray.c:
	* configure.ac:

	Added system tray applet & moved applets into their own folders.

2006-08-19  Jorn Baayen  <jorn@openedhand.com>

	* applets/launcher.c:

	Rewrite icon lookup code.

2006-08-19  Jorn Baayen  <jorn@openedhand.com>

	* COPYING:
	* applets/clock.c:
	* applets/launcher.c:
	* matchbox-panel/mb-panel.c:
	* matchbox-panel/mb-panel.h:

	License as GPL.

2006-08-19  Jorn Baayen  <jorn@openedhand.com>

	* applets/launcher.c: (panel_find_icon), (icon_theme_changed_cb):

	Handle errors when loading icons.

2006-08-18  Jorn Baayen  <jorn@openedhand.com>

	* applets/launcher.c: (launcher_data_free), (exec_to_argv),
	(button_press_event_cb), (button_release_event_cb),
	(grab_notify_cb), (mb_panel_applet_create):

	Scale icons. Icon lookup code still needs a bit of a cleanup.

2006-08-18  Jorn Baayen  <jorn@openedhand.com>

	* applets/clock.c: (mb_panel_applet_create):
