@@ -1,4 +1,8 @@
-AM_CPPFLAGS=-DPKGDATADIR=\"$(pkgdatadir)\" -DGETTEXT_PACKAGE=\"matchbox-panel\"
+SUBDIRS = data
+
+AM_CPPFLAGS=-DPKGDATADIR=\"$(pkgdatadir)\" \
+            -DGETTEXT_PACKAGE=\"matchbox-panel\" \
+	    -DDATADIR=\"$(sharedir)/matchbox-panel/battery/\"
 AM_CFLAGS = -Wall -g $(MATCHBOX_PANEL_CFLAGS) \
 	    -I$(top_srcdir) -I$(top_builddir) -Werror
 	    
