@@ -1,3 +1,12 @@
+2006-08-22  Jorn Baayen  <jorn@openedhand.com>
+
+	* applets/battery/Makefile.am:
+	* applets/battery/battery.c: (timeout), (mb_panel_applet_create):
+	* applets/battery/data/Makefile.am:
+	* configure.ac:
+
+	Use icons from gnome-power-manager for battery applet for now.
+
 2006-08-21  Jorn Baayen  <jorn@openedhand.com>
 
 	* applets/Makefile.am:
